added update Wallet
